# Nes

./: Cargo.toml  README.md  install.bat  install.ps1
Docs/: README.md
Docs/chapters/: 01-introduction.md  02-installation.md  03-the-shell.md  04-navigation.md  05-file-operations.md  06-text-processing.md  07-system.md  08-variables.md  09-operators.md  10-aliases.md  11-math.md  12-scripting.md  13-system-fallback.md  14-command-reference.md  15-examples.md
Docs/examples/: file-ops.nes  hello.nes  math-demo.nes  scaffold.nes  sysinfo.nes
src/: main.rs
